# hybrid-django-react

./: .flake8  .gitignore  Dockerfile  Dockerfile_frontend  README.md  docker-compose.yml  heroku.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  template-setup.py  webpack.config.js
frontend/: index.js
hybrid_django_react/: __init__.py  copy_assets.py  django_project_setup.py  django_settings_content_changes.py  django_user_model.py  format_code.py  poetry_setup.py  pytest_setup.py  run.py  user_config.py
hybrid_django_react/assets/: Dockerfile  package-lock.json  package.json  pyproject.toml  pytest.ini
hybrid_django_react/assets/frontend/: App.js  index.js
hybrid_django_react/assets/frontend/components/forms/: index.js
hybrid_django_react/assets/frontend/components/layout/: index.js
hybrid_django_react/assets/frontend/components/layout/navigation/NavBar/: NavBar.js
hybrid_django_react/assets/frontend/services/: index.js
hybrid_django_react/assets/frontend/services/LocalStorage/: LocalStorage.service.js
hybrid_django_react/assets/frontend/store/: index.js  rootReducer.js
hybrid_django_react/assets/frontend/utils/constants/: constants.js
hybrid_django_react/assets/frontend/utils/helpers/: helpers.js
hybrid_django_react/assets/locale/: .gitignore
hybrid_django_react/assets/templates/: _base.html
setup/: django_project_setup.py  django_settings_content_changes.py  django_user_model.py  docker_build.py  poetry_setup.py  run.py  urls_setup.py
templates/: _base.html  index.html
