[tool.poetry]
name = "hybrid-django-react"
version = "0.1.0"
description = "Django starter project template. Dockerized Django serving a static React app"
authors = ["gmso <german.mene@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
