[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["AUTHOR_POETRY <mail@mail.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.14"
psycopg2-binary = "^2.9.1"
django-allauth = "^0.45.0"
whitenoise = "^5.3.0"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
pytest-django = "^4.4.0"
black = "^21.8b0"
flake8 = "^3.9.2"
django-debug-toolbar = "^3.2.2"
ptvsd = "^4.3.2"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = ['migrations', 'setup']